[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Tank/Tank.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/onlyObjects_default.png" type="Texture" id=2]
[ext_resource path="res://src/GUI/HealthBar.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 20 )

[sub_resource type="Animation" id=2]
resource_name = "fire"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteFire:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteFire:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteFire:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 5.65685, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}

[node name="Tank" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]

[node name="SpriteBody" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 2 )
offset = Vector2( 0, 1 )
region_enabled = true
region_rect = Rect2( 216, 0, 42, 42 )

[node name="SpriteGun" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 2 )
offset = Vector2( 0, 16 )
region_enabled = true
region_rect = Rect2( 326, 264, 16, 30 )

[node name="SpriteFire" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 34, 0 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
offset = Vector2( 0, 12 )
region_enabled = true
region_rect = Rect2( 324, 295, 21, 39 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FirePoint" type="Position2D" parent="."]
position = Vector2( 48, 0 )

[node name="FireCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackedCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fire = SubResource( 2 )
[connection signal="timeout" from="AttackedCooldownTimer" to="." method="_on_AttackedCooldownTimer_timeout"]
